Change da imagem do carousel para resoluções de telemóveis

--- a/css/geral.css
+++ b/css/geral.css
@@ -165,7 +165,7 @@ input[type="text"]{width: 100%; display: block; height: 2.5em; margin-bottom: 1e
       text-shadow: 1px 1px 1px rgb(8, 48, 68);
     }
     .slider{
-      background: url('../img/hero.jpg') no-repeat fixed center center;
+      background: url('../img/aluno1.jpg') no-repeat fixed center center;
       background-size: auto;
     }
     .captionslider{
