--- a/css/geral.css
+++ b/css/geral.css
@@ -148,12 +148,12 @@ body, ul, li, section, h3{margin: 0; padding: 0:}
     width: 120px;
 }
 .editar{position:fixed; height:100%; width:100%; background:rgba(0,0,0,0.4) url(../img/load.gif) center center no-repeat; left:0px; top:0px; display: none;}
-.editar form{position:absolute; left:50%; top:50%; padding:20px; background:#fff; width:50%; height:34em; margin-left:-160px; margin-top:-15em; overflow-y: scroll;}
+.editar form{z-index: 10px;position:absolute; left:50%; top:50%; padding:20px; background:#fff; width:50%; height:34em; margin-left:-160px; margin-top:-15em; overflow-y: scroll;}
 .editar form label{display:block; margin-bottom:1em; color: rgb(36, 36, 36)}
 .editar form label .campo{display:block; font-size:1em;}
 .editar form label input,select{padding:5px; border:5px solid #CCC; width:80%;}
 .editar form .btnedit{display:block; margin:5px 0 0 0; float:left; cursor:pointer; border: none; padding: 1em; background: rgb(37, 90, 120);}
-.editar form .btnclose{display:block; margin:5px 0 0 0; float:right; cursor:pointer;}
+.editar form .btnclose{display:block; margin:5px 0 0 0; float:right; cursor:pointer; border: none; padding: 1em; background: rgb(231, 89, 75);}
 /*		Responsive Layout		*/
 
 @media (max-width: 760px) {
